syntax = "proto3";
package RedNimbus.Messages;

message MailServiceMessage {
	string mailTo = 1;
	string subject = 2;
	string body = 3;
}