syntax = "proto3";
package RedNimbus.Messages;

message TokenMessage {
	string Token = 1;
}